--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,15 +27,18 @@ services:
       ALLOW_ANONYMOUS_LOGIN: "yes"
 
   kafka:
-    image: bitnami/kafka:latest
+    image: bitnami/kafka:3.6
     restart: always
     ports:
       - "${KAFKA_LISTENER_PORT}:${KAFKA_LISTENER_PORT}"
+      - "${KAFKA_EXTERNAL_PORT}:${KAFKA_EXTERNAL_PORT}"
     environment:
       KAFKA_BROKER_ID: ${KAFKA_BROKER_ID}
       KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:${ZOOKEEPER_PORT}
-      KAFKA_CFG_LISTENERS: PLAINTEXT://:${KAFKA_LISTENER_PORT}
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://localhost:${KAFKA_LISTENER_PORT}
+      KAFKA_CFG_LISTENERS: PLAINTEXT://:${KAFKA_LISTENER_PORT},EXTERNAL://:${KAFKA_EXTERNAL_PORT}
+      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka:${KAFKA_LISTENER_PORT},EXTERNAL://localhost:${KAFKA_EXTERNAL_PORT}
+      KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       ALLOW_PLAINTEXT_LISTENER: "yes"
     depends_on:
       - zookeeper
@@ -48,6 +51,17 @@ services:
       - "${CLICKHOUSE_TCP_PORT}:${CLICKHOUSE_TCP_PORT}"
     volumes:
       - clickhouse-data:/var/lib/clickhouse
+
+  kafka-init:
+    image: bitnami/kafka:3.6
+    depends_on:
+      - kafka
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        sleep 15
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --if-not-exists --topic ${KAFKA_TOPIC_DATA} --bootstrap-server kafka:${KAFKA_LISTENER_PORT} --partitions 1 --replication-factor 1
+        /opt/bitnami/kafka/bin/kafka-topics.sh --create --if-not-exists --topic ${KAFKA_TOPIC_ERROR} --bootstrap-server kafka:${KAFKA_LISTENER_PORT} --partitions 1 --replication-factor 1
 
 volumes:
   pgdata:
