--- a/ingest/nginx.conf
+++ b/ingest/nginx.conf
@@ -4,6 +4,10 @@ events {
 }
 
 http {
+    # Logging (recommended for production)
+    error_log  /var/log/nginx/error.log  warn;
+    access_log /var/log/nginx/access.log  main;
+
     ## Upstream with keepalive pools
     upstream ingest_upstream {
         server ingest:5000;
