--- a/ingest/nginx.conf
+++ b/ingest/nginx.conf
@@ -4,9 +4,18 @@ events {
 }
 
 http {
-    # Logging (recommended for production)
-    error_log  /var/log/nginx/error.log  warn;
-    access_log /var/log/nginx/access.log  main;
+   log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main;
+    error_log /var/log/nginx/error.log error;
+
+    # Gzip Compression
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_types  application/json;
 
     ## Upstream with keepalive pools
     upstream ingest_upstream {
